# what-bump

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  VISION.md
.circleci/: config.yml
Formula/: what-bump.rb
scripts/: release.sh
src/: bumping.rs  changelog.rs  error.rs  main.rs  repo.rs
templates/: CHANGELOG.md  default.html  default.md
