[package]
authors = ["albx79 <otrebla79>"]
edition = "2018"
name = "what-bump"
version = "0.0.0-UNRELEASED"
license = "BSD-3-Clause"
description = "Detect required version bump based on conventional commit messages"

[dependencies]
semver = "0.9"
structopt = "0.3.3"
simple-error = "0.2"
fallible-iterator = "0.2.0"
askama = "0.8"
chrono = "0.4.9"
log = "0.4.8"
stderrlog = "0.4.3"
lazy_static = "1.4.0"

[dependencies.git2]
version = "0.10"
default-features = false
