[package]
authors = ["albx79 <otrebla79>"]
edition = "2018"
name = "what-bump"
version = "1.0.2"
license-file = "LICENSE"
description = "Detect required version bump based on conventional commit messages"
repository = "https://github.com/sky-uk/what-bump"
readme = "README.md"
keywords = ["semver", "conventional-commit"]
categories = ["command-line-utilities", "development-tools::build-utils"]
exclude = ["scripts/*", ".circleci/*", ".gitignore", "Dockerfile"]

[badges]
circle-ci = { repository = "sky-uk/what-bump", branch = "develop" }
is-it-maintained-issue-resolution = { repository = "sky-uk/what-bump" }
is-it-maintained-open-issues = { repository = "sky-uk/what-bump" }
maintenance = { status = "actively-developed" }

[dependencies]
semver = "0.9"
structopt = "0.3.3"
simple-error = "0.2"
fallible-iterator = "0.2.0"
askama = "0.8"
chrono = "0.4.9"
log = "0.4.8"
stderrlog = "0.4.3"
lazy_static = "1.4.0"

[dependencies.git2]
version = "0.10"
default-features = false
