[package]
authors = ["Alberto Colombo <alberto.colombo@skytv.it"]
edition = "2018"
name = "what-bump"
version = "0.0.0-UNRELEASED"
license-file = "LICENSE"
description = "Detect required version bump based on conventional commit messages"
repository = "https://github.com/sky-uk/what-bump"
readme = "README.md"
keywords = ["semver", "conventional-commit"]
categories = ["command-line-utilities", "development-tools::build-utils"]
exclude = ["scripts/*", ".circleci/*", ".gitignore", "Dockerfile"]

[badges]
circle-ci = { repository = "sky-uk/what-bump", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies]
semver = "0.9"
structopt = "0.3.9"
simple-error = "0.2"
fallible-iterator = "0.2.0"
chrono = "0.4"
log = "0.4.8"
stderrlog = "0.4.3"
lazy_static = "1.4.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.git2]
version = "0.11"
default-features = false

[dependencies.tera]
version = "1"
default-features = false
